Review modal WIP

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
         <%= image_tag "logo_name.gif", size: "200x200"%>
     </div>
     <div class="catchline text-center">
-      <h3>Et le replacement entre médecins n'est plus un souci</h3>
+      <h3 style="font-weight: lighter; margin-top: 0; padding: 0 20px;">Et le replacement entre médecins n'est plus un souci</h3>
     </div>
     <div class="search col-xs-12">
       <% if !user_signed_in? %>
