--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -106,6 +106,37 @@
   </div>
 </div>
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Donnez votre avis</h4>
+      </div>
+      <div class="modal-body">
+        <%= simple_form_for([ @user, @review ]) do |f| %>
+          <%= f.error_notification %>
+
+          <%= f.input :rating %>
+          <%= f.input :content %>
+
+          <%= f.button :submit, "Valider" %>
+        <% end %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-primary">Valider</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 
