--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -18,8 +18,8 @@
 
 <div class="container myprofile-container">
   <div class="row">
-    <div class="col-sm-12 col-md-8">
-      <div class="col-xs-6">
+    <div class="col-xs-12 col-sm-8">
+      <div class="col-sm-12 col-md-6">
         <div class="myprofile-card">
           <h4>Mes informations clés</h4>
           <hr>
@@ -45,7 +45,7 @@
           <br><br>
         </div>
       </div>
-      <div class="col-xs-6">
+      <div class="col-sm-12 col-md-6">
         <div class="myprofile-card">
           <h4>
           <% if current_user.has_practice %>
@@ -131,7 +131,7 @@
       </div>
 
     </div>
-    <div class="hidden-sm col-md-4">
+    <div class="hidden-xs col-sm-4">
       <div class="myprofile-reviews">
         <h4>Mes avis reçus</h4>
         <hr>
