good date format on user show view

--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -17,7 +17,7 @@
         <input id="startDate" name="start_date" type="hidden" value="" />
         <input id="endDate" name="end_date" type="hidden" value="" />
         <input id ="sendDates"name='commit' type='submit' class ="btn btn-primary" value='Ajouter la plage sélectionnée'/>
-        <% end -%>
+        <% end %>
       </div>
     </div>
   </div>
