--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -86,3 +86,22 @@
     </div>
   </div>
 </div>
+
+<body>
+  <nav class="navbar navbar-inverse">
+    <div class="container">
+      <div class="navbar-header">
+        <%= link_to 'Synergy', root_path, class: 'navbar-brand' %>
+      </div>
+      <ul class="nav navbar-nav">
+        <% if user_signed_in? %>
+          <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+          <li><%= link_to 'Your Conversations', conversations_path %></li>
+          <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'Log In', new_user_session_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+</body>
