--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,105 +1,209 @@
 <% content_for :meta_title, "RemplaMatch - Profil de #{@user.first_name} #{@user.last_name}" %>
 
-<div class="container user_container">
-  <div class="row" id="main_user_row">
-    <div class="profile">
-      <div class="card-profile">
-        <div class="col-xs-12 col-md-8">
-          <ul class = "list-unstyled doc_resume text-center">
+
+
+<div class="myprofile-header">
+  <div class="avatar-header text-center">
+    <% if @user.avatar.nil? %>
+        <%= image_tag "placeholder_pic.png", class: "avatar-superextralarge" %>
+      <% else %>
+        <%= image_tag @user.avatar, class: "avatar-superextralarge " %>
+      <% end %>
+    <h4><strong><%= "Dr. " if @user.speciality != "Kinésithérapie" %></strong><%= @user.first_name %> <%= @user.last_name %></h4>
+    <h5>
+      <i class="fa fa-fw fa-search"></i>
+      <%= @user.has_practice ? raw("A la recherche de <strong>remplaçants</strong>") : raw("A la recherche de <strong>remplacements</strong>") %>
+    </h5>
+  </div>
+  <hr>
+</div>
+
+<div class="container myprofile-container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8">
+      <div class="col-sm-12 col-md-6">
+        <div class="myprofile-card">
+          <h4>Informations clés</h4>
+          <hr>
+          <ul class="list-unstyled doc-user-profile">
+            <li><i class="fa fa-fw fa-stethoscope icon-profile"></i><p><%= @user.speciality %></p></li>
+            <li><i class="fa fa-fw fa-graduation-cap icon-profile"></i><p><%= @user.education %></p></li>
+            <li><i class="fa fa-fw fa-hashtag icon-profile"></i><p>Numéro de l'Ordre : <%= @user.numero_ordre %></p></li>
+            <% if !@user.has_practice %>
+              <li><i class="fa fa-fw fa-file-text-o icon-profile"></i><p>Numéro URSSAF : <%= @user.numero_ursaff %></p></li>
+            <% end %>
             <li>
-              <% if @user.avatar.nil? %>
-                <%= image_tag "placeholder_pic.png", class: "avatar-superextralarge" %>
+              <i class="fa fa-fw fa-thumbs-up icon-profile"></i>
+              <% if @user.reviews_i_received.size > 0 %>
+                <p>
+                  <%= ("<i class='fa fa-star fa-yellow'></i>" * @user.reviews_i_received.average(:rating).to_f.round).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - @user.reviews_i_received.average(:rating).to_f.round)).html_safe %>
+                  <span class="number-of-reviews"> <%= pluralize(@user.reviews_i_received.size, 'avis reçu') %></span>
+                </p>
               <% else %>
-                <%= image_tag @user.avatar, class: "avatar-superextralarge " %>
+                <p>Aucun avis reçu pour le moment</p>
               <% end %>
             </li>
-            <li><H4><strong>Dr </strong><%= @user.first_name %> <%= @user.last_name %></H4></li>
-            <li><i class="fa fa-stethoscope" id="icon-profil"> : <%= @user.speciality %></i></li><hr>
-            <li><i class="fa fa-home" id="icon-profil"> : <%= @user.address %></i></li><hr>
-            <li><i class="fa fa-graduation-cap" id="icon-profil"> : <%= @user.education %></i></li>
           </ul>
-          <div class="description-profil">
-            <div class="col-xs-12">
-              <h4>Présentation :</h4>
-              <% if @user.presentation.nil? %>
-              <i><p> En attente d'informations de la part du médecin</p></i>
-              <% else %>
-              <h6><%= @user.presentation %></h6>
-              <%end%>
-              <hr>
-            </div>
-            <div class="col-xs-12">
-              <h4>Cursus et publications :</h4>
-              <% if @user.publications.nil? %>
-              <i><p> En attente d'informations de la part du médecin</p></i>
-              <% else %>
-              <h6><%= @user.publications %></h6>
-              <% end %>
-              <hr>
-            </div>
-          </div>
-          <div class="location">
-            <div class="card-acces col-xs-12 col-md-12">
-              <h4>Informations d'accès :</h4>
-              <p><%= @user.address %></p>
-            </div>
-            <div id="map-user" style="; height: 200px;" class="hidden-xs col-md-12">
-              <script type="text/javascript">
-                <% content_for(:after_js) do %>
-                  <%= javascript_tag do %>
-                    $(document).ready(function() {
-                      handler = Gmaps.build('Google');
-                      handler.buildMap({ internal: { id: 'map-user' } }, function(){
-                        markers = handler.addMarkers(<%= raw @markers.to_json %>);
-                        handler.bounds.extendWith(markers);
-                        handler.fitMapToBounds();
-                        handler.getMap().setZoom(14);
-                      });
-                    });
-                  <% end %>
-                <% end %>
-            </script>
-            </div>
-          </div>
+          <br><br>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <div class="myprofile-card">
+          <h4>
+          <% if @user.has_practice %>
+            Activité & cabinet
+          <% else %>
+            Filtres de recherche
+          <% end %>
+          </h4>
+          <hr>
+          <ul class = "list-unstyled doc-user-profile">
+            <% if @user.has_practice %>
+              <li><i class="fa fa-fw fa-user-md icon-profile"></i><p>Conventionnement secteur <%= @user.convention %></p></li>
+              <li><i class="fa fa-fw fa-suitcase icon-profile"></i><p><%= human_house_visits(@user.house_visits) %></p></li>
+              <li><i class="fa fa-fw fa-phone icon-profile"></i><p><%= human_secretary(@user.secretary) %></p></li>
+              <li><i class="fa fa-fw fa-home icon-profile"></i><p><%= human_housing(@user.housing) %></p></li>
+              <li>
+                <i class="fa fa-fw fa-money icon-profile"></i>
+                <p id="p-comm">Rétrocommission souhaitée :</p>
+                <div class="small-comm-tag"><%= @user.commission %>%</div>
+              </li>
+            <% else %>
+              <li>
+                <i class="fa fa-fw fa-suitcase icon-profile"></i>
+                <p><%= human_house_visits_tolerance(@user.house_visits_tolerance)%></p>
+              </li>
+              <li>
+                <i class="fa fa-fw fa-phone icon-profile"></i>
+                <p><%= human_nosecretary_tolerance(@user.nosecretary_tolerance)%></p>
+              </li>
+              <li>
+                <i class="fa fa-fw fa-home icon-profile"></i>
+                <p><%= human_nohousing_tolerance(@user.nohousing_tolerance)%></p>
+              </li>
+              <li>
+                <i class="fa fa-fw fa-money icon-profile"></i>
+                <p id="p-comm">Rétrocommission minimale souhaitée :</p>
+                <div class="small-comm-tag"><%= @user.min_commission %>%</div>
+              </li>
+            <% end %>
+          </ul>
+          <br><br>
         </div>
       </div>
 
-      <div id="small_calendar" class="text-center">
-        <div class="col-xs-12 col-md-4">
-          <div class="user_availabilities grey_card">
-          <h4>Choisissez un créneau de remplacement : </h4>
-          <% if @user.slots.nil? %>
-            ppp
-          <%else%>
+      <div class="col-xs-12">
+        <h4>Présentation :</h4>
+        <% if @user.presentation.nil? %>
+        <p> Editez votre profil pour rédiger votre présentation et obtenir jusqu'à 80% de résultats en plus.</p>
+        <% else %>
+        <p><%= @user.presentation %></p>
+        <%end%>
+        <hr>
 
-              <% @user.slots.each do |slot| %>
-                <ul class="list-inline list-unstyled">
-                  <% if current_user.numero_ordre.nil? %>
-                    <ul class="list-unstyled">
-                      <li class= "single_dispo"><%= link_to "#{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), data: {toggle: "modal", target: "#contacter"}%>
-                      </li>
-                    </ul>
-                  <% else %>
-                    <ul class="list-unstyled">
-                      <li class= "single_dispo"><%= link_to "#{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "" %>
-                      </li>
-                    </ul>
-                  <% end %>
-                </ul>
+        <h4>Cursus et publications :</h4>
+        <% if @user.publications.nil? %>
+        <p> Editez votre profil pour renseigner vos publications.</p>
+        <% else %>
+        <p><%= @user.publications %></p>
+        <% end %>
+        <hr>
+      </div>
+
+      <div class="location">
+        <div class="card-acces col-xs-12 col-md-12">
+          <h4>Informations d'accès :</h4>
+          <p><%= @user.address %></p>
+        </div>
+        <div id="map-user" style="; height: 200px;" class="hidden-xs col-md-12">
+          <script type="text/javascript">
+            <% content_for(:after_js) do %>
+              <%= javascript_tag do %>
+                $(document).ready(function() {
+                  handler = Gmaps.build('Google');
+                  handler.buildMap({ internal: { id: 'map-user' } }, function(){
+                    markers = handler.addMarkers(<%= raw @markers.to_json %>);
+                    handler.bounds.extendWith(markers);
+                    handler.fitMapToBounds();
+                    handler.getMap().setZoom(14);
+                  });
+                });
               <% end %>
             <% end %>
-            </div>
-            <div class="description-profil grey_card">
-              <h4>Recommandations :</h4>
-                <div class="empty-comment">
-                  <i class="fa fa-comment"></i>
-                  <p>Il n'y a pas encore de recommandation pour cet utilisateur</p>
-                </div>
-            </div>
+        </script>
         </div>
+      </div>
+
+    </div>
+    <div class="col-xs-12 col-sm-4">
+      <div class="user_availabilities grey_card">
+      <h4>Choisissez un créneau de remplacement : </h4>
+      <% if @user.slots.nil? %>
+        ppp
+      <%else%>
+
+          <% @user.slots.each do |slot| %>
+            <ul class="list-inline list-unstyled">
+              <% if @user.numero_ordre.nil? %>
+                <ul class="list-unstyled">
+                  <li class= "single_dispo"><%= link_to "#{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, user_id: @user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), data: {toggle: "modal", target: "#contacter"}%>
+                  </li>
+                </ul>
+              <% else %>
+                <ul class="list-unstyled">
+                  <li class= "single_dispo"><%= link_to "#{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, user_id: @user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "" %>
+                  </li>
+                </ul>
+              <% end %>
+            </ul>
+          <% end %>
+        <% end %>
+        </div>
+    </div>
+    <div class="hidden-xs col-sm-4">
+      <div class="myprofile-reviews">
+        <h4>Mes avis reçus</h4>
+        <hr>
+        <% if @user.reviews_i_received.size > 0 %>
+          <% @user.reviews_i_received.order(created_at: :desc).each do |review| %>
+            <div class="review">
+              <p><em>"<%= review.content %>"</em></p>
+              <p>
+              <%= ("<i class='fa fa-star fa-yellow'></i>" * review.rating).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - review.rating)).html_safe %>
+              <span class="reviewer-name">de
+              <%= link_to user_path(review.reviewer) do %>
+                <%= review.reviewer.first_name %> <%= review.reviewer.last_name %>
+              <% end %>
+                , le <%= review.created_at.strftime('%d/%m/%Y') %></span>
+              </p>
+            </div>
+            <hr>
+          <% end %>
+        <% else %>
+        <div class="empty-comment">
+          <p>Vous n'avez pas encore reçu d'avis.</p>
+        </div>
+        <% end %>
       </div>
     </div>
   </div>
+
+
+
+
+
+
+
+  <div class="row">
+
+  </div>
+
+</div>
+
+<!-- FORMER VERSION BENEATH
+ -->
+
+
   <!-- Modal -->
   <div class="modal fade text-center" id="contacter">
   <!-- Modal content with Sign up form -->
