--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -27,6 +27,7 @@
     }
     h4{
     margin-bottom: 50px;
+    min-height: 44px;
     }
 }
 .incoming_demands{
@@ -57,4 +58,5 @@
   border-radius: 8px;
   padding: 10px;
   margin: 20px;
+  min-height: 142px;
 }
