--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -103,13 +103,12 @@
   <!-- Modal -->
   <div class="modal fade text-center" id="contacter">
   <!-- Modal content with Sign up form -->
-    <h2>It's working !</h2>
     <div class="container">
       <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
         <div class="form-design background">
           <div class="text-center" id="form_title">
-            <h2>Information</h2>
-            <p>Ajouter des informations vous concernant pour permettre à votre interlocuteur de mieux vous connaître.</p>
+            <h2>Informations complémentaires</h2>
+            <p>Merci de renseigner les informations ci-dessous afin de pouvoir effectuer une demande de remplacement.</p>
           </div>
             <%= simple_form_for(current_user) do |f| %>
               <%= f.error_notification %>
