--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -31,8 +31,8 @@
     }
 }
 .incoming_demands{
-  border-right: 1px solid #333333;
-  border-left: 1px solid #333333;
+  border-right: 1px solid rgba(51, 51, 51, 0.07);
+  border-left: 1px solid rgba(51, 51, 51, 0.07);
 }
 .fa-calendar-minus-o{
    font-size: 40px;
@@ -55,8 +55,9 @@
 }
 .requests{
   background-color: white;
-  border-radius: 8px;
+  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  border-radius: 5px;
   padding: 10px;
   margin: 20px;
-  min-height: 142px;
+  height: 140px;
 }
