--- a/app/views/shared/_new_reviews_modal.html.erb
+++ b/app/views/shared/_new_reviews_modal.html.erb
@@ -1,7 +1,7 @@
 <% current_user.bookings.each do |booking| %>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-          Launch demo modal
+        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">
+          Donnez votre avis
         </button>
 
         <!-- Modal -->
