--- a/app/views/shared/_new_reviews_modal.html.erb
+++ b/app/views/shared/_new_reviews_modal.html.erb
@@ -1,4 +1,4 @@
-<% current_user.bookings.each do |booking| %>
+<%# current_user.bookings.each do |booking| %>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">
           Donnez votre avis
@@ -28,7 +28,7 @@
             </div>
           </div>
         </div>
-<% end %>
+<%# end %>
 
 
 
