Design profile page

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -65,9 +65,8 @@
   p {
     font-size: 13px;
   }
-  border: 0.5px solid grey;
   background-color: #F9F9FA;
-  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.29), 0 1px 0 0 rgba(0, 0, 0, 0.03);
   padding: 1px 12px 10px 12px;
   margin-top: 9px;
   border-radius: 3px;
