Datepicker fixed : position and language FR

--- a/app/assets/stylesheets/components/_datepicker.scss
+++ b/app/assets/stylesheets/components/_datepicker.scss
@@ -4,6 +4,7 @@
 .datepicker .new {
   color: $gray-light !important;
 }
-// .datepicker .datepicker-dropdown .dropdown-menu .datepicker-orient-left .datepicker-orient-bottom {
-//   top: 230px !important;
-// }
+.datepicker{
+  margin-top: 77px !important;
+
+}
