--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -2,7 +2,7 @@
 
 <div id="title" class="text-center">
   <% if current_user.has_practice? %>
-    <h3>Mon calendrier de recherches de remplacants</h3>
+    <h3>Mon calendrier de recherches de remplaçants</h3>
   <% else %>
     <h3>Mon calendrier de recherches de remplacements</h3>
   <%end%>
