--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -107,28 +107,28 @@
         <%= image_tag 'home_doc_4.jpg', class: "avatar-larger" %>
         <h4>Dr Leray Benjamin | Angers</h4>
         <div class="description text-justify">
-          <p>La plateforme que je recommande à tous mes amis internes.</p>
+          <p>"La plateforme que je recommande à tous mes amis internes pour trouver leurs remplacements. "</p>
         </div>
       </div>
       <div class="carousel-card text-center col-xs-12">
         <%= image_tag 'home_doc_3.jpg', class: "avatar-larger" %>
         <h4>Dr Valet Marielle | Orléans</h4>
         <div class="description text-justify">
-          <p>Je suis très heureux de ce service. Je peux désormais rapidement prendre des congés et organiser des weekends de dernière minute !</p>
-        </div>
-      </div>
-      <div class="carousel-card text-center col-xs-12">
-        <%= image_tag 'home_doc_2.jpg', class: "avatar-larger" %>
-        <h4>Dr Lamont Tatiana | Vaucresson</h4>
-        <div class="description text-justify">
-          <p>Remplamatch est de loin la solution la plus pratique, rapide et agréable que j'ai pu utiliser.</p>
+          <p>"Je rentre les périodes pendant lesquelles je recherche des remplaçants et le site s'occupe du reste ! Que rêver de mieux ?"</p>
         </div>
       </div>
       <div class="carousel-card text-center col-xs-12">
         <%= image_tag 'home_doc_1.jpg', class: "avatar-larger" %>
         <h4>Dr Gibaud Laurent | Les Sables d'Olonnes</h4>
         <div class="description text-justify">
-          <p>Auparavant, trouver un remplacant de dernière minute était une mission quasi-impossible, mais ca, c'était avant.</p>
+          <p>"Auparavant, trouver un remplaçant de dernière minute était une mission quasi-impossible, mais ca, c'était avant."</p>
+        </div>
+      </div>
+      <div class="carousel-card text-center col-xs-12">
+        <%= image_tag 'home_doc_2.jpg', class: "avatar-larger" %>
+        <h4>Dr Lamont Tatiana | Vaucresson</h4>
+        <div class="description text-justify">
+          <p>"Remplamatch est de loin la solution la plus pratique, rapide et agréable que j'ai pu utiliser."</p>
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
           itemsTablet: [768,1],
           itemsTabletSmall: false,
           itemsMobile : [479,1],
-          autoPlay : 3000,
+          autoPlay : 4000,
           stopOnHover : false
         });
       });
