switch from english to french on error messages when no result

--- a/app/views/users/search_practices.html.erb
+++ b/app/views/users/search_practices.html.erb
@@ -150,7 +150,7 @@
           <div class="container-fluid">
             <div class="row">
               <% if @users.first.nil? %>
-                <h4 class="text-center">Sorry, there is no result in your area.</h4>
+                <h4 class="text-center">Désolé, il n'a pas de résultat pour cette recherche (pour le moment).</h4>
               <% end %>
               <% @users.each do |user| %>
               <div class="col-xs-12">
